--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   http: ^1.2.2
   image_picker: ^1.1.2
   image: ^4.5.2
-  salomon_bottom_bar: ^3.3.2
+  persistent_bottom_nav_bar_v2: ^5.3.0
 
 dev_dependencies:
   flutter_test:
